# Floppy-Disk-Bible

./: .gitignore  BUILD_WINDOWS.md  README.md  bible_data.tar.bz2  bible_data.txt.xz
bible_reader_c/: build.bat  main  main.c  main_c_gc  main_c_super_opt  main_linux_lto  main_linux_o3  main_linux_opt  main_linux_os  main_win.c
bible_reader_c_nostart/: build.bat  main  main.c  main_linux  main_linux_opt  main_win.c
bible_reader_cpp/: main  main.cpp
bible_reader_forth/: main.fs
bible_reader_fortran/: main  main.f90
bible_reader_fortran_opt/: main  main.f90
bible_reader_go/: main  main.go
bible_reader_go_opt/: bible_reader_go_opt  main.go
bible_reader_odin/: main  main.odin
bible_reader_pascal/: main  main.pas
bible_reader_pascal_opt/: main  main.pas
bible_reader_rust/: main  main.rs  main_rust  main_small
bible_reader_rust_opt/: Cargo.toml  main  main_linux
bible_reader_rust_opt/src/: main.rs
bible_reader_zig/: main  main.zig  main_linux_small
bible_reader_zig_opt/: main  main.zig  main_linux_minimal  main_linux_stripped
cmd/extractor/: main.go
