[package]
name = "bible_reader_rust_opt"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization
codegen-units = 1   # Reduce parallel code generation for better optimization
panic = "abort"     # Remove panic unwinding
strip = true        # Strip symbols
